--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
         "graphql-tag": "^2.11.0",
         "react": "^17.0.0",
         "react-dom": "^17.0.0",
+        "react-hook-form": "^6.11.5",
         "react-router-dom": "^5.2.0",
         "uuid": "^8.3.1"
     },
