--- a/hasura/metadata/tables.yaml
+++ b/hasura/metadata/tables.yaml
@@ -1,5 +1,15 @@
 - table:
     schema: public
+    name: Channel
+  select_permissions:
+  - role: user
+    permission:
+      columns:
+      - id
+      - name
+      filter: {}
+- table:
+    schema: public
     name: Chat
   object_relationships:
   - name: creator
