Enable creation of OpenTok sessions

--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -2,7 +2,7 @@ actions:
 - name: createChannel
   definition:
     kind: synchronous
-    handler: '{{ACTION_BASE_URL}}/channel'
+    handler: '{{ACTION_BASE_URL}}/channel/create'
     forward_client_headers: true
   permissions:
   - role: user
