--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -8,3 +8,6 @@ SNOWPACK_PUBLIC_AUTH_LOGIN_CALLBACK_URL=http://localhost:3000/auth0/logged-in
 SNOWPACK_PUBLIC_AUTH_LOGOUT_CALLBACK_URL=http://localhost:3000/auth0/logged-out
 SNOWPACK_PUBLIC_AUTH_DOMAIN=<auth0-domain>
 SNOWPACK_PUBLIC_AUTH_CLIENT_ID=<auth0-client-id>
+
+# Vonage Video API
+OPENTOK_API_KEY=<opentok-api-key>
