--- a/services/actions/package.json
+++ b/services/actions/package.json
@@ -33,6 +33,7 @@
         "graphql-request": "^3.3.0",
         "jest": "^26.6.3",
         "jwks-rsa": "^1.11.0",
+        "opentok": "^2.10.0",
         "supertest": "^6.0.1",
         "typescript": "^4.0.5",
         "uuid": "^8.3.1"
@@ -49,6 +50,7 @@
         "@graphql-codegen/typescript-graphql-files-modules": "1.18.0",
         "@graphql-codegen/typescript-graphql-request": "^2.0.2",
         "@graphql-codegen/typescript-operations": "1.17.10",
+        "@types/opentok": "^2.9.0",
         "dotenv": "^8.2.0",
         "node-env-run": "^4.0.2",
         "ts-jest": "^26.4.4",
