--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
         "@emotion/react": "^11.1.1",
         "@emotion/styled": "^11.0.0",
         "@fortawesome/free-regular-svg-icons": "^5.15.1",
+        "@opentok/client": "^2.18.2",
         "@types/react-router-dom": "^5.1.6",
         "apollo-cache-inmemory": "^1.6.6",
         "apollo-link-http": "^1.5.17",
@@ -25,6 +26,7 @@
         "framer-motion": "^2.9.4",
         "graphql": "^15.4.0",
         "graphql-tag": "^2.11.0",
+        "opentok-react": "^0.11.0",
         "react": "^17.0.0",
         "react-dom": "^17.0.0",
         "react-hook-form": "^6.11.5",
