--- a/services/actions/package.json
+++ b/services/actions/package.json
@@ -24,15 +24,13 @@
     },
     "homepage": "https://github.com/clowdr-app/clowdr#readme",
     "dependencies": {
-        "@types/express": "^4.17.9",
-        "@types/supertest": "^2.0.10",
-        "@types/uuid": "^8.3.0",
         "express": "^4.17.1",
         "express-jwt": "^6.0.0",
         "graphql": "^15.4.0",
         "graphql-request": "^3.3.0",
         "jest": "^26.6.3",
         "jwks-rsa": "^1.11.0",
+        "node-fetch": "^2.6.1",
         "opentok": "^2.10.0",
         "supertest": "^6.0.1",
         "typescript": "^4.0.5",
@@ -50,7 +48,11 @@
         "@graphql-codegen/typescript-graphql-files-modules": "1.18.0",
         "@graphql-codegen/typescript-graphql-request": "^2.0.2",
         "@graphql-codegen/typescript-operations": "1.17.10",
+        "@types/express": "^4.17.9",
+        "@types/node-fetch": "^2.5.7",
         "@types/opentok": "^2.9.0",
+        "@types/supertest": "^2.0.10",
+        "@types/uuid": "^8.3.0",
         "dotenv": "^8.2.0",
         "node-env-run": "^4.0.2",
         "ts-jest": "^26.4.4",
