--- a/services/playout/package.json
+++ b/services/playout/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "build": "tsc",
         "start": "node build/server.js",
-        "dev": "nodenv -E ./.env -e \"tsc-watch --onSuccess \\\"npm run-script --prefix ../../ run-services-playout\\\"\"",
+        "dev": "nodenv -E ./.env -e \"tsc-watch --compiler \\\"ttypescript/bin/tsc\\\" --onSuccess \\\"npm run-script --prefix ../../ run-services-playout\\\"\"",
         "graphql-codegen": "graphql-codegen --config codegen.js"
     },
     "repository": {
@@ -27,10 +27,14 @@
     },
     "dependencies": {
         "@apollo/client": "^3.2.9",
+        "@aws-sdk/client-cloudfront": "^1.0.0-rc.7",
         "@aws-sdk/client-medialive": "^1.0.0-rc.7",
+        "@aws-sdk/client-mediapackage": "^1.0.0-rc.7",
         "@aws-sdk/region-provider": "0.1.0-preview.1",
         "express": "^4.17.1",
-        "graphql": "^15.4.0"
+        "graphql": "^15.4.0",
+        "reflect-metadata": "^0.1.13",
+        "typescript-is": "^0.17.0"
     },
     "devDependencies": {
         "@graphql-codegen/cli": "1.19.2",
@@ -46,6 +50,8 @@
         "dotenv": "^8.2.0",
         "node-env-run": "^4.0.2",
         "ts-node": "^9.0.0",
-        "tsc-watch": "^4.2.9"
+        "tsc-watch": "^4.2.9",
+        "ttypescript": "^1.5.12",
+        "typescript": "^4.1.2"
     }
 }
