Implement broadcast prototype backend

--- a/services/actions/.env.example
+++ b/services/actions/.env.example
@@ -1,3 +1,17 @@
 AUTH0_API_DOMAIN=<auth0-subdomain>.auth0.com
 AUTH0_AUDIENCE=hasura
 AUTH0_ISSUER_DOMAIN=https://<auth0-subdomain>.auth0.com/
+
+HASURA_ADMIN_SECRET=XXXXX
+
+GRAPHQL_API_SECURE_PROTOCOLS=false
+GRAPHQL_API_DOMAIN=localhost:8080
+
+# Vonage Video API
+OPENTOK_API_KEY=<OpenTok API key>
+OPENTOK_API_SECRET=<OpenTok API secret>
+
+# AWS
+AWS_ACCESS_KEY_ID=<AWS access key>
+AWS_SECRET_ACCESS_KEY=<AWS secret key>
+AWS_REGION=<AWS region>
