--- a/hasura/metadata/tables.yaml
+++ b/hasura/metadata/tables.yaml
@@ -2078,6 +2078,50 @@
                           _eq: CONFERENCE_MANAGE_ROLES
 - table:
     schema: public
+    name: Room
+  insert_permissions:
+  - role: user
+    permission:
+      check: {}
+      columns:
+      - name
+      backend_only: false
+  select_permissions:
+  - role: user
+    permission:
+      columns:
+      - hlsUri
+      - id
+      - name
+      - vonageSessionId
+      filter: {}
+  delete_permissions:
+  - role: user
+    permission:
+      filter: {}
+  event_triggers:
+  - name: roomCreated
+    definition:
+      enable_manual: false
+      insert:
+        columns: '*'
+    retry_conf:
+      num_retries: 0
+      interval_sec: 10
+      timeout_sec: 60
+    webhook: http://host.docker.internal:3001/channel/created
+  - name: roomDeleted
+    definition:
+      enable_manual: false
+      delete:
+        columns: '*'
+    retry_conf:
+      num_retries: 0
+      interval_sec: 10
+      timeout_sec: 60
+    webhook: http://host.docker.internal:3001/channel/deleted
+- table:
+    schema: public
     name: User
   object_relationships:
   - name: onlineStatus
