--- a/services/actions/package.json
+++ b/services/actions/package.json
@@ -6,8 +6,9 @@
     "scripts": {
         "build": "tsc",
         "start": "node build/server.js",
-        "dev": "nodenv -E ./.env -e \"tsc-watch --onSuccess \\\"npm run-script --prefix ../../ run-services-actions\\\"\"",
-        "test": "jest --config jest.config.ts --forceExit"
+        "dev": "nodenv -E ./.env -e \"tsc-watch --compiler \\\"ttypescript/bin/tsc\\\" --onSuccess \\\"npm run-script --prefix ../../ run-services-actions\\\"\"",
+        "test": "jest --config jest.config.ts --forceExit",
+        "graphql-codegen": "graphql-codegen --config codegen.js"
     },
     "repository": {
         "type": "git",
@@ -23,24 +24,44 @@
     },
     "homepage": "https://github.com/clowdr-app/clowdr#readme",
     "dependencies": {
+        "@apollo/client": "^3.2.9",
+        "@aws-sdk/client-cloudfront": "^1.0.0-rc.7",
+        "@aws-sdk/client-medialive": "^1.0.0-rc.7",
+        "@aws-sdk/client-mediapackage": "^1.0.0-rc.7",
+        "@aws-sdk/region-provider": "0.1.0-preview.1",
         "@types/express": "^4.17.9",
         "@types/supertest": "^2.0.10",
         "@types/uuid": "^8.3.0",
         "express": "^4.17.1",
         "express-jwt": "^6.0.0",
+        "graphql": "^15.4.0",
         "jest": "^26.6.3",
         "jwks-rsa": "^1.11.0",
+        "nanoid": "^3.1.18",
+        "opentok": "^2.10.0",
         "supertest": "^6.0.1",
         "typescript": "^4.0.5",
-        "uuid": "^8.3.1"
+        "typescript-is": "^0.17.0"
     },
     "engines": {
         "node": "14.x"
     },
     "devDependencies": {
+        "@graphql-codegen/cli": "1.19.2",
+        "@graphql-codegen/fragment-matcher": "2.0.0",
+        "@graphql-codegen/introspection": "1.18.0",
+        "@graphql-codegen/typed-document-node": "^1.18.0",
+        "@graphql-codegen/typescript": "1.17.11",
+        "@graphql-codegen/typescript-document-nodes": "1.17.8",
+        "@graphql-codegen/typescript-graphql-files-modules": "1.18.0",
+        "@graphql-codegen/typescript-graphql-request": "^2.0.2",
+        "@graphql-codegen/typescript-operations": "1.17.10",
+        "@types/opentok": "^2.9.0",
+        "@types/ws": "^7.4.0",
         "node-env-run": "^4.0.2",
         "ts-jest": "^26.4.4",
         "ts-node": "^9.0.0",
-        "tsc-watch": "^4.2.9"
+        "tsc-watch": "^4.2.9",
+        "ttypescript": "^1.5.12"
     }
 }
