--- a/services/actions/package.json
+++ b/services/actions/package.json
@@ -25,6 +25,7 @@
     "homepage": "https://github.com/clowdr-app/clowdr#readme",
     "dependencies": {
         "@apollo/client": "^3.2.9",
+        "@aws-sdk/client-cloudformation": "^1.0.0-rc.7",
         "@aws-sdk/client-cloudfront": "^1.0.0-rc.7",
         "@aws-sdk/client-medialive": "^1.0.0-rc.7",
         "@aws-sdk/client-mediapackage": "^1.0.0-rc.7",
@@ -39,6 +40,7 @@
         "jwks-rsa": "^1.11.0",
         "nanoid": "^3.1.18",
         "opentok": "^2.10.0",
+        "slugify": "^1.4.6",
         "supertest": "^6.0.1",
         "typescript": "^4.0.5",
         "typescript-is": "^0.17.0"
